# koreader_sync_statistic_analysis

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  API_FIX_GUIDE.md  BUG_FIX_REPORT.md  Dockerfile  KompanionReimplementation_Task.md  QUICK_START.md  README.md  USAGE_GUIDE.md  alembic.ini  cookies.txt  docker-compose.yml  env.example  main.py  pyproject.toml  start_backend.bat  start_frontend.bat  temp_backend.py  test_api_endpoints.py  test_frontend.py  阅读统计增强任务.md
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  auth.py  books.py  devices.py  opds.py  sync.py  users.py  web.py  webdav.py
app/core/: __init__.py  cache.py  config.py  database.py  security.py
app/frontend/: __init__.py  api_client.py  config.py  main.py
app/frontend/components/: __init__.py  design_system.py  navigation.py
app/frontend/pages/: __init__.py  devices.py  overview.py  public_reading.py  statistics.py
app/models/: __init__.py  book.py  device.py  statistics.py  sync_progress.py  user.py
app/schemas/: __init__.py  auth.py  opds.py  sync.py  user.py
app/templates/: api_docs.html  base.html  dashboard.html  devices.html  login.html  statistics.html
app/utils/: performance.py
docker/: nginx.conf
docs/: api_documentation.md  deployment_guide.md  koreader_compatibility_guide.md  security_audit_report.md  user_guide.md
migrations/: env.py  script.py.mako
scripts/: compatibility_test.py  create_admin.py  docker-setup.sh  init_db.py  init_postgres.sql  install.sh  manage.py  security_check.py  update.sh
storage/books/: .gitkeep
storage/covers/: .gitkeep
storage/webdav/: .gitkeep
templates/: base.html  books.html  dashboard.html
tests/: __init__.py  conftest.py  test_auth.py  test_books.py  test_koreader_compatibility.py  test_opds.py  test_sync_api.py  test_webdav.py
